[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heu-mcp"
version = "0.1.4"
description = "MCP Server for HEU Legal API - manage documents and PDFs for e-signature with Claude AI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Luca Visconti", email = "info@heulegal.com"}
]
keywords = [
    "mcp",
    "heu",
    "heulegal",
    "e-signature",
    "esignature",
    "documents",
    "pdf",
    "claude",
    "anthropic"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Lucav21/heu-mcp"
Repository = "https://github.com/Lucav21/heu-mcp"
Issues = "https://github.com/Lucav21/heu-mcp/issues"
"HEU Legal" = "https://heulegal.com"

[project.scripts]
heu-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
